tests/models/snapshots/handle_create_with_password_with_duplicate@users.snap
---
source: tests/models/users.rs
assertion_line: 95
expression: new_user
---
Err(
    Message(
        "该邮箱已被使用",
    ),
)
